--- a/src/app/components/settings-panel/settings-panel.component.html
+++ b/src/app/components/settings-panel/settings-panel.component.html
@@ -52,7 +52,7 @@
       </button>
     </div>
     
-    <div class="settings-section">
+    <div class="settings-section" *ngIf="false">
       <h3>{{ 'settings.rotationCenter' | translate }}</h3>
       <button (click)="resetRotationCenter()">
         {{ 'settings.resetCenter' | translate }}
