--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
     {{ 'toolbar.title' | translate }}
   </button>
   <div *ngIf="!isCollapsed">
-    <div class="toolbar-section">
+    <div class="toolbar-section" *ngIf="false">
       <h3>{{ 'toolbar.brushType' | translate }}</h3>
       <div class="brush-types">
         <button 
